Update workflow with latest action versions and permissions

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -10,11 +10,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.9'
         
@@ -64,4 +66,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: app-debug
-        path: bin/*.apk 
+        path: bin/*.apk
+        retention-days: 5 
